@@ -1986,10 +1986,6 @@ A [[Special:WhatLinksHere/$2|full list]] is available.',
 'shareduploadwiki-desc'          => 'The description on its $1 on the shared repository is shown below.',
 'shareduploadwiki-linktext'      => 'file description page',
 'shareddescriptionfollows'       => '-', # do not translate or duplicate this message to other languages
-'shareduploadduplicate'          => 'This file is a duplicate of $1 from shared repository.',
-'shareduploadduplicate-linktext' => 'another file',
-'shareduploadconflict'           => 'This file has the same name as $1 from the shared repository.',
-'shareduploadconflict-linktext'  => 'another file',
 'noimage'                        => 'No file by this name exists, but you can $1.',
 'noimage-linktext'               => 'upload one',
 'uploadnewversion-linktext'      => 'Upload a new version of this file',
