@@ -1243,10 +1243,6 @@ $wgMessageStructure = array(
 		'shareduploadwiki-desc',
 		'shareduploadwiki-linktext',
 		'shareddescriptionfollows',
-		'shareduploadduplicate',
-		'shareduploadduplicate-linktext',
-		'shareduploadconflict',
-		'shareduploadconflict-linktext',
 		'noimage',
 		'noimage-linktext',
 		'uploadnewversion-linktext',
